k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # with this, Flask sees /api/expenses as just /expenses
spec:
  ingressClassName: nginx  # through this, Kubernetes knows which Ingress controller owns this rule
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific  # matches any path starting with the given string -> /api in this case
            backend:
              service:
                name: api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
